unpackaged/main/default/objects/dca_mass_action__Mass_Action_Log__c/fields/Created_Days_Ago__c.field-meta.xml
<CustomField>
    <fullName>Created_Days_Ago__c</fullName>
    <formula>TODAY()-DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Days Ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>