unpackaged/main/default/objects/dca_mass_action__Mass_Action_Log__c/fields/dca_mass_action__Batch_Success_Percentage__c.field-meta.xml
<CustomField>
    <fullName>dca_mass_action__Batch_Success_Percentage__c</fullName>
    <description>Calculates the success percentage of the batch job&#39;s executions.</description>
    <formula>IF(
  dca_mass_action__Processed_Batches__c &gt; 0,
  MAX( 0, dca_mass_action__Processed_Batches__c - dca_mass_action__Failed_Batches__c ) / dca_mass_action__Processed_Batches__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the success percentage of the batch job&#39;s executions.</inlineHelpText>
    <label>Batch Success %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>