unpackaged/main/default/objects/dca_mass_action__Mass_Action_Log__c/fields/dca_mass_action__Failed_Batches__c.field-meta.xml
<CustomField>
    <fullName>dca_mass_action__Failed_Batches__c</fullName>
    <description>Total number of batches with a failure. A batch is considered transactional, so any unhandled exceptions constitute an entire failure of the batch. Pairs to the Number of Errors field on the AsyncApexJob object.</description>
    <inlineHelpText>Total number of batches with a failure. A batch is considered transactional, so any unhandled exceptions constitute an entire failure of the batch.</inlineHelpText>
    <label>Failed Batches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>