unpackaged/main/default/objects/dca_mass_action__Mass_Action_Log__c/fields/dca_mass_action__Message_Type__c.field-meta.xml
<CustomField>
    <fullName>dca_mass_action__Message_Type__c</fullName>
    <description>Is this message just informational, a success event, or an error event.</description>
    <inlineHelpText>Is this message just informational, a success event, or an error event.</inlineHelpText>
    <label>Message Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Informational</fullName>
                <default>true</default>
                <label>ℹ️ Informational</label>
            </value>
            <value>
                <fullName>Success</fullName>
                <label>✅ Success</label>
            </value>
            <value>
                <fullName>Error</fullName>
                <label>🚫 Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>