unpackaged/main/default/objects/dca_mass_action__Mass_Action_Log__c/fields/dca_mass_action__Parent_Log__c.field-meta.xml
<CustomField>
    <fullName>dca_mass_action__Parent_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Child logs capture details for discrete events during the lifecycle of a batch job. When the job started, success or failure of its executions, and when the job finished. Parent logs groups these child logs together for a given batch job id, and reflect the overall job status.</description>
    <inlineHelpText>Child logs capture details for discrete events during the lifecycle of a batch job. Parent logs groups these child logs together for a given batch job id.</inlineHelpText>
    <label>Parent Log</label>
    <referenceTo>dca_mass_action__Mass_Action_Log__c</referenceTo>
    <relationshipLabel>Related Logs</relationshipLabel>
    <relationshipName>Mass_Action_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>