unpackaged/main/default/objects/dca_mass_action__Mass_Action_Log__c/fields/dca_mass_action__Parent_Log_Configuration__c.field-meta.xml
<CustomField>
    <fullName>dca_mass_action__Parent_Log_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated only when the log record type is &quot;Parent Log&quot;, otherwise it is null. This allows us to have a filtered related list of parent logs on Mass Action Configuration page layout. https://douglascayers.com/2015/11/18/salesforce-filter-related-lists-without-code/</description>
    <inlineHelpText>Populated only when the log record type is &quot;Parent Log&quot;, otherwise it is null.</inlineHelpText>
    <label>Parent Log Configuration</label>
    <referenceTo>dca_mass_action__Mass_Action_Configuration__c</referenceTo>
    <relationshipLabel>Mass Action Logs</relationshipLabel>
    <relationshipName>Mass_Action_Parent_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>