unpackaged/main/default/objects/dca_mass_action__Mass_Action_Log__c/fields/dca_mass_action__Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>dca_mass_action__Submitted_Date__c</fullName>
    <description>When the Apex Job was submitted. Pairs to the Created Date field on the AsyncApexJob object.</description>
    <inlineHelpText>When the Apex Job was submitted.</inlineHelpText>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>