unpackaged/main/default/objects/dca_mass_action__Mass_Action_Log__c/fields/Timestamp_At__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_At__c</fullName>
    <formula>DATETIMEVALUE(&quot;1970-01-01 00:00:00&quot;) + (VALUE(dca_mass_action__Timestamp__c) / 86400000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timestamp At</label>
    <type>DateTime</type>
</CustomField>